# sing-box-config

./: .gitignore  README.md  build_android.bat  build_singbox.py  check_public_repo.py  generate_config.py  manage.bat  manage.ps1  pyproject.toml  reload.bat  serve_config.py  setup.ps1  singbox-service.xml  singbox-traffic-service.xml  subscriptions.example.yaml  template.example.json  traffic_monitor.py
.github/workflows/: ci.yml
config/examples/: subscriptions.yaml
config/examples/templates/: desktop-windows-sing-box-1.14.json
config/services/: singbox-service.xml  singbox-traffic-service.xml
parsers/: __init__.py  anytls.py  clash.py  common.py  hysteria2.py  singbox_json.py  ss.py  trojan.py  tuic.py  uri.py  vless.py  vmess.py
scripts/bootstrap/: setup.bat  setup.ps1
scripts/config/: generate_config.py
scripts/manage/: build_android.bat  manage.bat  manage.ps1  reload.bat
scripts/monitor/: traffic_monitor.bat  traffic_monitor.py
scripts/quality/: check_public_repo.py
scripts/serve/: serve_android.bat  serve_config.py
singbox_config/: __init__.py  audit.py  builder.py  generator.py  health.py  io_utils.py  profiles.py  traffic_monitor.py
tests/: test_audit.py  test_builder.py  test_cache_pipeline.py  test_clash_parser.py  test_io_utils.py  test_profiles.py  test_regions.py  test_simple_generator.py  test_traffic_monitor.py
tools/: README.md  build_android.bat  reload.bat  serve_android.bat  traffic_monitor.bat
traffic_dashboard/: app.js  index.html  styles.css
web/traffic-dashboard/: app.js  index.html  styles.css
