[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sing-box-config-toolchain"
version = "0.2.0"
description = "Simple desktop and Android sing-box configuration generator"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32,<3",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["parsers*", "singbox_config*"]
